test/conformance/kuttl/mutate/refactor/add-pod-priorityclassname/02-pod.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- pod.yaml
assert:
- pod-mutated.yaml
