test/conformance/kuttl/mutate/refactor/add-pod-priorityclassname/03-deployment.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- deployment.yaml
assert:
- deployment-mutated.yaml
