test/conformance/kuttl/mutate/refactor/add-pod-priorityclassname/04-cronjob.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- cronjob.yaml
assert:
- cronjob-mutated.yaml
