test/conformance/kuttl/mutate/refactor/add-pod-priorityclassname/cronjob-mutated.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: hello
  namespace: add-pod-priorityclassname
spec:
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - args:
            - /bin/sh
            - -c
            - date; echo Hello from the Kubernetes cluster
            image: somejunkimagegoeshere
            name: hello
          priorityClassName: non-production
          restartPolicy: OnFailure
  schedule: '*/1 * * * *'
