test/conformance/kuttl/mutate/refactor/add-pod-priorityclassname/deployment-mutated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: busybox
  namespace: add-pod-priorityclassname
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - command:
        - sleep
        - "9999"
        image: somejunkbusyboximage:1.28
        name: busybox
      priorityClassName: non-production
