test/conformance/kuttl/mutate/refactor/add-pod-priorityclassname/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
  namespace: add-pod-priorityclassname
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: somejunkbusyboximage:1.28
        name: busybox
        command: ["sleep", "9999"]
