test/conformance/kuttl/mutate/refactor/add-pod-priorityclassname/pod-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blank
  namespace: add-pod-priorityclassname
spec:
  containers:
  - image: sfsdafasdfsadfsadf
    name: busybox
  priorityClassName: non-production
