test/conformance/kuttl/mutate/refactor/add-pod-priorityclassname/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blank
  namespace: add-pod-priorityclassname
spec:
  containers:
  - name: busybox
    image: sfsdafasdfsadfsadf
