test/conformance/kuttl/mutate/refactor/add-pod-priorityclassname/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-pod-priorityclassname
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
